NOCC 1.3    ?? ??, 200?

    * Bug #1565100 : Mixed EOL in html/send.php (Arnaud Boudou).
    * Bug #1565082 : Logout.php use empty theme (Arnaud Boudou).
    * RFE #1563453 : Use <label> for send.php (Tim Gerundt).
    * Bug #1555543 : Some small spelling errors in en.php (Arnaud Boudou).
    * Bug #1552568 : Setting wrap None is not shown as selected (Arnaud Boudou).
    * Bug #1551529 : $html_to occurs twice in language files (Arnaud Boudou).
    * Bug #1550843 : Move and Copy buttons of top row in Inbox don't work
      (Arnaud Boudou).
    * Bug #1550133 : Some pages do not validate as XHTML 1.1 (Arnaud Boudou).
    * Bug #1549545 : Extra slash introduced by Back link on error page (Arnaud
      Boudou).
    * Bug #1547166 : errorpage: wrong images URL's and misbehaving back button
      (Arnaud Boudou).
    * Improve RSS handling (Arnaud Boudou).
    * Bug #1524048 : Session Data Gets Mangled / NoccKey and NoccIdent (Arnaud
      Boudou).
    * Bug #1526431 : Java script error in IE on delete (Arnaud Boudou).
    * Patch #1537220 : LANG and THEME may change also pop users (Vadim).
    * Add mail controls (delete, select all, etc.) to the bottom of the INBOX
      page (Arnaud Boudou).
    * Bug #1524044 :  SMTP Auth Failures mishandled (Arnaud Boudou).
    * Improve remote pictures handling (Arnaud Boudou).
    * Bug #1518887 : errors when enable preferences (Arnaud Boudou).

NOCC 1.2    July 01, 2006

    * Add lang and theme choice to preferences section (Arnaud Boudou).
    * Disable distant pictures display by default (Arnaud Boudou).
    * Fix HTML entities translation and replies formating (Arnaud Boudou).
    * Bug #1477984 : Mark as (Un)read, how can one see it works? (Arnaud
      Boudou).
    * Bug #1444882 : NOCC display source code instead of form (Arnaud Boudou). 

NOCC 1.1    February 28, 2006

    * Patch #1438939 : get_default_from_address in conf.php (Roman Korolyov).
    * Patch #1438393 : strict UTF-8 charset issue (Roman Korolyov).