@@ -1,8 +1,9 @@
 NOCC 1.3    ?? ??, 200?
 
+    * Patch #1564552 : Use <th> for table header cells (Tim Gerundt).
     * Bug #1565100 : Mixed EOL in html/send.php (Arnaud Boudou).
     * Bug #1565082 : Logout.php use empty theme (Arnaud Boudou).
-    * RFE #1563453 : Use <label> for send.php (Tim Gerundt).
+    * Patch #1563453 : Use <label> for send.php (Tim Gerundt).
     * Bug #1555543 : Some small spelling errors in en.php (Arnaud Boudou).
     * Bug #1552568 : Setting wrap None is not shown as selected (Arnaud Boudou).
     * Bug #1551529 : $html_to occurs twice in language files (Arnaud Boudou).
